@@ -1,13 +1,3 @@
-apply plugin: "java"
-
-/*
-apply from: '../featherfly-common-test/java_base.gradle'
-apply from: '../featherfly-common-test/maven_push.gradle'
-
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
-apply plugin: 'signing'
-*/
 sourceSets {
     main {
         java {
@@ -18,114 +8,3 @@ sourceSets {
         }
     }
 }
-
-repositories {
-    maven {
-		url  ant.properties['user.home'] +  "/.m2/repository"
-	}
-	maven {
-		url  "http://maven.aliyun.com/nexus/content/groups/public/"
-	}
-	mavenCentral()
-}
-
-//为所有的jar包做数字签名  
-/*
-signing {  
-    sign configurations.archives  
-}  
-
-uploadArchives {  
-    repositories {
-        mavenDeployer {  
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) } 
-            repository(url:"https://oss.sonatype.org/service/local/staging/deploy/maven2") {  
-                authentication(userName: 'yufei', password: 'yufeimvn101')  
-            }  
-            pom.project {  
-                name project.name  
-                packaging 'jar'
-                description 'common tool'  
-                url 'https://github.com/featherfly/common.git'  
-                scm {  
-                    url 'scm:git@github.com:featherfly/common.git'  
-                    connection 'scm:git@github.com:featherfly/common.git'  
-                    developerConnection 'git@github.com:featherfly/common.git'  
-                }  
-                licenses {  
-                    license {  
-                        name 'The Apache Software License, Version 2.0'  
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'  
-                        distribution 'repo'  
-                    }  
-                }  
-                developers {  
-                    developer {  
-                        id 'featherfly'  
-                        name 'Yufei'
-                    }  
-                }  
-            }  
-        }  
-    }  
-}
-
-task("uploadNexusArchives", type: Upload) {
-    configuration = configurations.archives
-    uploadDescriptor = true
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-            repository(url:"http://192.168.203.241:8081/nexus/content/repositories/releases/") {
-                authentication(userName: 'admin', password: 'admin123')
-            }
-            pom.project {
-                name project.name
-                packaging 'jar'
-                description 'common tool'
-                url 'https://github.com/featherfly/common.git'
-                scm {
-                    url 'scm:git@github.com:featherfly/common.git'
-                    connection 'scm:git@github.com:featherfly/common.git'
-                    developerConnection 'git@github.com:featherfly/common.git'
-                }
-                licenses {
-                    license {
-                        name 'The Apache Software License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                        distribution 'repo'
-                    }
-                }
-                developers {
-                    developer {
-                        id 'featherfly'
-                        name 'zhongji'
-                    }
-                }
-            }
-        }
-    }
-}
-*/
-/*
-test {
-    useTestNG()
-    testLogging.showStandardStreams = true
-    minHeapSize = "128m"
-    maxHeapSize = "512m"
-    jvmArgs '-XX:MaxPermSize=256m'
-    beforeTest { descriptor ->
-        logger.lifecycle("Running test: " + descriptor)
-    }
-    onOutput { descriptor, event ->
-        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
-    }
-}
-
-jar {
-    manifest.attributes 'Build-Name': archivesBaseName
-    manifest.attributes 'Build-By': "zhong ji"
-    manifest.attributes 'Build-Tool' : "gradle " + gradle.gradleVersion
-    manifest.attributes 'Build-Jdk' : ant.properties['java.runtime.version']
-    manifest.attributes 'Bundle-License': 'http://www.apache.org/licenses/LICENSE-2.0'
-}*/
